[project]
dependencies = [
  "bs4>=0.0.2",
  "playwright>=1.51.0",
  "pre-commit>=4.2.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.0",
  "requests>=2.32.3",
  "ruff>=0.11.0",
  "schedule>=1.2.2",
]
description = "Bot that automates the process of reserving fields at SF Rec facilities."
name = "sf-rec-bot"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
